
Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: yyyy/mm/dd
Description:

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/08/14
Description:
Fixed a problem in the CPS contraction phase.  An optimization that
eliminates construction of a record that already exists was not
checking that the existing record was the same record kind (bug #119).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/07/28
Description:
Switch to using MAP_ANONYMOUS to allocate memory on Linux systems.
This change avoids problems when "/dev" does not support execute
permission (as seems to be the case with some versions of Linux
running on ChromeBooks; bug #120).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/06/28
Description:
Fix for bug 127 (Crash on windows with OS.Process.system).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/06/07
Description:
Fixed a long-standing bug in Socket.recvVec, which prevented the result
from being used in a string pattern match (thanks to Vesa Norrman
for the fix).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/05/01
Description:
Fixed minor issue in an error message; type variable name should be
printed with leading '

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2013/11/25
Description:
Added PackWord{16,32}{Big,Little} structures to the Unsafe module.