@@ -106,9 +106,10 @@ and adds support for Mac OS X 10.10 (Yosemite).
     for more details.
     </p>
     <table class="buglist">
-      <tr><td class="bugid">119</td><td>Conversion from vector of tuple to vector of vector causes a crush</td></tr>
-      <tr><td class="bugid">127</td><td>Crash on windows with OS.Process.system</td></tr>
+      <tr><td class="bugid">110</td><td><tt>IntInf.~&gt;&gt;</tt> returns the wrong answer on negative input</td></tr>
+      <tr><td class="bugid">119</td><td>Conversion from vector of tuple to vector of vector causes a crash</td></tr>
       <tr><td class="bugid">120</td><td>Install fails w/ map failure on Chromebook</td></tr>
+      <tr><td class="bugid">127</td><td>Crash on windows with <tt>OS.Process.system</tt></td></tr>
       <tr><td class="bugid">XXX</td><td>DESCRIPTION</td></tr>
     </table>
     <p>The following unnumbered bugs were also fixed:
@@ -121,7 +122,7 @@ and adds support for Mac OS X 10.10 (Yosemite).
       </li>
       <li>
         Fixed minor issue in an error message; type variable name should be
-	printed with leading <tt>'</tt>
+	printed with leading <tt>'</tt>.
       </li>
     </ul>
   </dd>
